# simple-http-server

./: Cargo.toml  Makefile  README.md
src/: main.rs  util.rs
src/templates/: list_header.hbs  list_item.hbs  list_item_parent.hbs  page.hbs  upload.hbs
