[package]
authors = ["thewawar <thewawar@gmail.com>", "Outvi V <oss@outv.im>"]
description = "Simple HTTP server"
edition = "2018"
keywords = ["simple", "http", "server", "static", "file"]
license = "MIT"
name = "simple-http-server"
readme = "README.md"
repository = "https://github.com/outloudvi/simple-http-server"
version = "0.6.1"

[dependencies]
clap = "2.33.0"
termcolor = "1.0.5"
lazy_static = "1.4.0"
time = "0.1.42"
chrono = "0.4.9"
flate2 = "1.0.11"
filetime = "0.2.7"
pretty-bytes = "0.2.2"
url = "2.1.0"
hyper-native-tls = "0.3.0"
mime_guess = "2.0"
# Iron crates
iron = "0.6.1"
iron-cors = "0.8.0"
multipart = { version = "0.16.1", features = ["iron"] }
htmlescape = "0.3.1"
percent-encoding = "2.1.0"
path-dedot = "1"
