[package]
authors = ["thewawar <thewawar@gmail.com>", "Outvi V <oss@outv.im>"]
description = "Simple HTTP server"
edition = "2018"
keywords = ["simple", "http", "server", "static", "file"]
license = "MIT"
name = "simple-http-server"
readme = "README.md"
repository = "https://github.com/outloudvi/simple-http-server"
version = "0.7.0"

[dependencies]
chrono = "0.4.9"
clap = "2.33.3"
filetime = "0.2.7"
flate2 = "1.0.11"
handlebars = "3.5.2"
htmlescape = "0.3.1"
hyper-native-tls = "0.3.0"
iron = "0.6.1"
iron-cors = "0.8.0"
lazy_static = "1.4.0"
mime_guess = "2.0"
multipart = {version = "0.16.1", features = ["iron"]}
path-dedot = "1"
percent-encoding = "2.1.0"
pretty-bytes = "0.2.2"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
termcolor = "1.0.5"
time = "0.1.42"
url = "2.1.0"
